get, post and receive answer

--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -21,7 +21,7 @@
     },
     "run": {
         "@path": "/.c9/runners",
-        "@runner": "Node.js (default)",
+        "@runner": "Apache httpd (PHP, HTML)",
         "configs": {
             "@inited": "true",
             "json()": {}
